<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/dashboardFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_dashboard" />

    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/ic_calendar"
        android:title="@string/nav_calendar" />

    <item
        android:id="@+id/remindersFragment"
        android:icon="@drawable/ic_alarm"
        android:title="@string/nav_reminders" />

    <item
        android:id="@+id/statisticsFragment"
        android:icon="@drawable/ic_chart"
        android:title="@string/nav_statistics" />

    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/nav_settings" />

</menu>
